--- a/projects/angular/src/layout/tabs/_properties.tabs.scss
+++ b/projects/angular/src/layout/tabs/_properties.tabs.scss
@@ -11,7 +11,7 @@
       --clr-nav-active-bg-color: var(--clr-global-selection-color);
       --clr-nav-hover-bg-color: var(--clr-sidenav-link-hover-color);
 
-      --clr-nav-link-color: var(--clr-color-neutral-600);
+      --clr-nav-link-color: var(--clr-color-neutral-700);
       --clr-nav-link-active-color: var(--clr-color-neutral-1000);
 
       --clr-nav-link-font-weight: var(--clr-p1-font-weight);
